# ai4pain-2026-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
kaggle/: dataset-metadata.json  kernel-metadata-stage1.json  kernel-metadata-stage2.json  kernel-metadata-v2.json  kernel-metadata.json  notebook_kaggle.ipynb  stage1_cnn_aug.ipynb  stage1_cnn_aug.py  stage1_cnn_v2.ipynb  stage1_cnn_v2.py  stage2_cnn.ipynb  stage2_cnn.py  upload_dataset.sh  upload_stage2_cache.sh
recovered/: 02_raw_stats.py  03_physio_features.py  04_tfdomain_features.py  10_morphology_coupling.py  18_armhand_search.py  19_armhand_dl.py  23_tierC_tvsymp_eda.py  24_subject_constrained_decoding.py  28_preproc_filter_sweep.py  30_build_resampled_feature_tables.py  32_stage1_upgrade_suite.py
scripts/: 02_raw_stats.py  04_tfdomain_features.py  05_visualizations.py  06_class_tests.py  07_dimreduction.py  09_temporal_armhand.py  12_armhand_stronger_ml.py  13_tierA1_onset_alignment.py  14_tierA2_bvp_kinetics.py  15_tierA3_stage1_calibration.py  18_armhand_search.py  19_armhand_dl.py  20_armhand_waveform_residual.py  21_paper_features.py  22_tierC_pda_bvp.py  23_tierC_tvsymp_eda.py  30_build_resampled_feature_tables.py  34_nopain_stage2_calibration.py  analyze_hard_subjects.py  analyze_loso_spread.py  best_mission.py  decode_cached_suite31.py  diagnose_hard_subjects_loso.py  diagnose_subjects.py  generate_modality_tables.py  merge_cnn_stage2.py  optimize_stage1_per_modality.py  optimize_stage1_sweep.py  optimize_stage2_sweep.py  plot_diagnostics.py  plot_per_subject_signals.py  predict_test.py  (+23 more)
(+727 files in other folders)
