[project]
name = "ai4pain-analysis"
version = "0.1.0"
description = "AI4Pain 2026 dataset exploration and statistical analysis"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "neurokit2>=0.2.8",
    "umap-learn>=0.5.5",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "pyarrow>=15.0",
    "xgboost>=2.0",
    "pingouin>=0.5.4",
    "torch>=2.11.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
